# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  chessengine.sln  chessengine.vcxproj  chessengine.vcxproj.filters  chessengine_core.vcxproj  chessengine_core.vcxproj.filters  chessengine_tests.vcxproj  chessengine_tests.vcxproj.filters
build-release/Debug/: chessengine_core.lib
build-release/Release/: chessengine_core.lib
build-release/chessengine.dir/Debug/: chessengine.exe.recipe  chessengine.ilk
build-release/chessengine.dir/Debug/chessengine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-release/chessengine.dir/Release/: chessengine.exe.recipe
build-release/chessengine_core.dir/Debug/: chessengine_core.lib.recipe
build-release/chessengine_core.dir/Release/: chessengine_core.lib.recipe
build-release/chessengine_tests.dir/Debug/: chessengine_tests.exe.recipe  chessengine_tests.ilk
build-release/chessengine_tests.dir/Release/: chessengine_tests.exe.recipe
build-release/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
docs/: TECHNICAL_OVERVIEW.md
include/: Board.h  ConsoleRenderer.h  Move.h  MoveGen.h  OpeningBook.h  Search.h  TranspositionTable.h
src/: Board.cpp  ConsoleRenderer.cpp  Move.cpp  MoveGen.cpp  OpeningBook.cpp  Search.cpp  TranspositionTable.cpp  main.cpp
tests/: basic_tests.cpp
(+44 files in other folders)
